--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+h1 {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#list {
+  width: 40%;
+  margin: 60px auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form,
+.task {
+  border: 1px solid grey;
+  padding: 10px 20px;
+  margin-bottom: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+form input {
+  padding: 4px 8px;
+  flex-grow: 1;
+  margin-right: 16px;
+}
+.task {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+button {
+  font-size: 16px;
+  color: rgb(24, 24, 87);
+  border-radius: 8px;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+button:focus {
+  outline: 0;
+}
+input[type="text"] {
+  font-size: 20px;
+  font-family: monospace;
+}
+.task input[type="checkbox"] {
+  transform: scale(1.8) translateY(1px);
+  margin: 0 16px 0 0;
+  cursor: pointer;
+}
+.userInput input {
+  padding: 4px;
+}
+.userInput {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  margin-bottom: 0.8rem;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listItems {
+  display: flex;
+  justify-content: space-between;
 }
